# motia

./: .gitignore  .skill-check.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  biome.json  contributors.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/iii-init/: Cargo.toml
crates/iii-init/src/: child_exits.rs  fs_handler.rs  mount.rs  network.rs  root_pivot.rs  shell_dispatcher.rs  supervisor.rs
crates/iii-init/src/fs_handler/: ops.rs  streaming.rs  tests.rs
crates/iii-network/: Cargo.toml
crates/iii-network/src/: backend.rs  conn.rs  proxy.rs  stack.rs  wake_pipe.rs
crates/iii-network/tests/: network_integration.rs
crates/iii-supervisor/: Cargo.toml
crates/iii-supervisor/src/: child.rs  control.rs  lib.rs  protocol.rs  shell_protocol.rs
crates/iii-supervisor/tests/: socketpair_integration.rs
crates/iii-tools/: Cargo.toml
crates/iii-tools/src/: main.rs
crates/iii-worker/: Cargo.toml
crates/iii-worker/src/: lib.rs  main.rs
crates/iii-worker/src/cli/: app.rs  binary_download.rs  builtin_defaults.rs  bundle_download.rs  config_file.rs  host_shim.rs  lifecycle.rs  local_worker.rs  lockfile.rs  managed.rs  mod.rs  oci_ref.rs  pidfile.rs  project.rs  registry.rs  rootfs.rs  rootfs_cache.rs  sandbox.rs  shell_client.rs  shell_relay.rs  source_watcher.rs  squashfs.rs  status.rs  stderr_sink.rs  supervisor_ctl.rs  sync.rs  test_support.rs  vm_boot.rs  worker_manager_daemon.rs  worker_manifest.rs  worker_manifest_deps.rs  worker_trigger.rs
crates/iii-worker/src/core/: add.rs  clear.rs  error.rs  events.rs  host.rs  list.rs  mod.rs  project.rs  remove.rs  start.rs  stop.rs  types.rs  update.rs
crates/iii-worker/src/sandbox_daemon/: README.md  iii.worker.yaml  mod.rs
crates/iii-worker/tests/: binary_worker_integration.rs  bundle_worker_integration.rs  common_fixtures_integration.rs  config_clear_integration.rs  config_crossplatform_integration.rs  config_crud_integration.rs  config_force_integration.rs  config_managed_integration.rs  config_path_type_integration.rs  engine_death_cascade_integration.rs  firmware_integration.rs  local_add_dependencies_integration.rs  local_worker_integration.rs  oci_gate_smoke.rs  oci_worker_integration.rs  project_detection_integration.rs  vm_args_integration.rs  vm_gate_smoke.rs  vm_integration.rs  vm_lifecycle_integration.rs  worker_integration.rs  worker_list_discovery_integration.rs  worker_manager_integration.rs  worker_trigger_integration.rs
crates/iii-worker/tests/common/: assertions.rs  fixtures.rs  isolation.rs  mod.rs
crates/motia-tools/: Cargo.toml
crates/motia-tools/src/: main.rs
crates/scaffolder-core/: Cargo.toml
crates/scaffolder-core/src/: iii.rs  lib.rs  product.rs  telemetry.rs
crates/scaffolder-core/src/runtime/: check.rs  mod.rs  tool.rs
crates/scaffolder-core/src/templates/: copier.rs  fetcher.rs  manifest.rs  mod.rs  version.rs
crates/scaffolder-core/src/tui/: mod.rs  prompts.rs
crates/scaffolder-core/tests/: fetcher.rs
engine/: CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.debug  LICENSE  PATENTS  README.md  config.yaml  docker-compose.prod.yml  docker-compose.yml  header.txt  install.sh
engine/benches/: kv_store_bench.rs  state_adapter_bench.rs
engine/function-macros/src/: lib.rs
engine/packaging/aur/: PKGBUILD.template
engine/src/: cli_trigger.rs  condition.rs  function.rs  lib.rs  logging.rs  main.rs  protocol.rs  services.rs  telemetry.rs  trigger.rs  trigger_formats.rs  update_ops.rs
engine/src/builtins/: kv.rs  mod.rs  pubsub_lite.rs  queue.rs  queue_kv.rs
engine/src/cli/: advisory.rs  download.rs  error.rs  exec.rs  github.rs  mod.rs  platform.rs  registry.rs  state.rs  telemetry.rs  update.rs
engine/src/cli/project/: mod.rs
engine/src/config/: mod.rs
engine/src/engine/: mod.rs
engine/src/invocation/: auth.rs  http_function.rs  http_invoker.rs  method.rs  mod.rs  signature.rs  url_validator.rs
engine/src/modules/: config.rs  module.rs
engine/src/modules/bridge_client/: mod.rs
engine/src/modules/http_functions/: config.rs
engine/src/modules/observability/: config.rs  mod.rs
engine/src/modules/pubsub/: pubsub.rs
engine/src/modules/queue/: config.rs  queue.rs
engine/src/modules/rest_api/: api_core.rs  config.rs  views.rs
engine/src/modules/state/: state.rs  structs.rs
engine/src/modules/stream/: stream.rs  structs.rs
engine/src/modules/telemetry/: environment.rs  mod.rs
engine/src/modules/worker/: mod.rs  rbac_session.rs
engine/src/worker_connections/: mod.rs  traits.rs
engine/src/workers/: config.rs  external.rs  mod.rs  redis.rs  registry.rs  registry_worker.rs  reload.rs  secure_temp.rs  traits.rs
engine/src/workers/bridge_client/: README.md  iii.worker.yaml  mod.rs
engine/src/workers/configuration/: README.md  configuration.rs  mod.rs
engine/src/workers/cron/: README.md  config.rs  cron.rs  iii.worker.yaml  mod.rs  registry.rs  structs.rs
engine/src/workers/engine_fn/: README.md  mod.rs
engine/src/workers/http_functions/: config.rs  mod.rs
engine/src/workers/observability/: README.md  config.rs  configuration.rs  iii.worker.yaml  logs_layer.rs  metrics.rs  mod.rs  otel.rs  sampler.rs
engine/src/workers/pubsub/: README.md  config.rs  iii.worker.yaml  mod.rs  pubsub.rs  registry.rs
engine/src/workers/queue/: README.md  config.rs  iii.worker.yaml  message.rs  mod.rs  queue.rs  registry.rs  subscriber_config.rs
engine/tests/: cli_integration.rs  config_reload_e2e.rs  dlq_redrive_e2e.rs  http_middleware_e2e.rs  install_sh_integration.sh  install_sh_unit.bats  invocation_extensibility.rs  observability_configuration_e2e.rs  project_init_e2e.rs  queue_configuration_e2e.rs  queue_e2e_concurrency_resilience.rs  queue_e2e_failure_retry.rs  queue_e2e_fanout.rs  queue_e2e_happy_path.rs  queue_integration.rs  rabbitmq_queue_integration.rs  rbac_infrastructure_e2e.rs  reload_manager_unit.rs  reload_scope_unit.rs  state_configuration_e2e.rs  state_stream_update_e2e.rs  state_stream_update_redis_e2e.rs
engine/tests/common/: queue_helpers.rs
engine/tests/fixtures/: argv_probe.sh
(+753 files in other folders)
