[package]
name = "iii-init"
version = "0.1.0"
edition = "2024"
license = "Elastic-2.0"
description = "PID 1 init binary for iii microVM workers"

[lib]
name = "iii_init"
path = "src/lib.rs"

[[bin]]
name = "iii-init"
path = "src/main.rs"

[dependencies]
nix = { version = "0.31", features = ["mount", "signal", "process", "fs"] }
libc = "0.2"
thiserror = "2"
# Supervisor library: provides Config/State/Request/Response/control::serve used
# by the "supervisor mode" path inside exec_worker when III_CONTROL_PORT is set.
# Sync-only; no tokio. Cross-compiles cleanly to linux-musl (same target as init).
iii-supervisor = { path = "../iii-supervisor" }
# Needed for the blocking control loop inside supervisor mode.
anyhow = "1"
