[package]
name = "iii-worker"
version.workspace = true
edition = "2024"
license = "Elastic-2.0"
description = "iii managed worker runtime — VM-based isolated worker execution"

[lib]
name = "iii_worker"
path = "src/lib.rs"

[[bin]]
name = "iii-worker"
path = "src/main.rs"

[features]
default = []
embed-libkrunfw = []
embed-init = ["iii-filesystem/embed-init"]
# Test-only features — gate heavy integration tests (never in default)
integration-vm = []
integration-oci = []

[dependencies]
iii-filesystem = { path = "../iii-filesystem" }
iii-network = { path = "../iii-network" }
# TODO: switch to crates.io pin before shipping; path dep for co-development
iii-sdk = { path = "../../sdk/packages/rust/iii" }
iii-helpers = { workspace = true }
iii-shell-client = { path = "../iii-shell-client" }
iii-shell-proto = { path = "../iii-shell-proto" }
iii-supervisor = { path = "../iii-supervisor" }
msb_krun = { version = "0.1.16", features = ["net", "blk"] }
oci-client = "0.16"
oci-spec = "0.9"
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread", "fs", "signal", "time", "io-std"] }
clap = { version = "4", features = ["derive", "env"] }
# MDX CLI reference generation for the hidden `gen-cli-docs` subcommand.
iii-clap-docs = { path = "../iii-clap-docs" }
colored = "3.0.0"
cliclack = "0.3"
console = "0.16"
ctrlc = "3.4"
serde = { version = "1", features = ["derive"] }
scaffolder-core = { workspace = true }
serde_json = "1"
serde_yaml = "0.9"
semver = { workspace = true }
anyhow = "1.0.100"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-trait = "0.1.89"
nix = { version = "0.30.1", features = ["fs", "signal", "process", "term"] }
dirs = "6"
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
# Used by the bundle archive cache to update mtime on cache hit so LRU
# eviction reflects real recency, not initial-write time.
filetime = "0.2"
# Cross-process advisory file lock for serializing concurrent
# `iii worker add <bundle-name>` calls during the extract+rename step.
# Sync API: callers use tokio::task::spawn_blocking to acquire.
fslock = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures = "0.3"
# Needed to construct `oci_client::client::ImageLayer` / `Config` when we
# replace the monolithic `client.pull` with a streaming per-layer pull
# for byte-level progress.
bytes = "1"
indicatif = "0.17"
notify = "8.2.0"
# `iii worker exec` stdout/stderr/stdin frames encode binary payloads
# as base64 strings inside JSON. `0.22` matches the engine's version.
base64 = "0.22"
# The shell relay needs direct libc access for `SO_PEERCRED` /
# `getpeereid` peer-uid checks on the exec unix socket.
libc = "0.2"
# `iii worker exec --timeout 30s` uses humantime's canonical duration
# grammar (`30s`, `5m`, `1h`, `500ms`).
humantime = "2"
# Used by sandbox_daemon::config for command denylist.
regex = "1"
# Used by sandbox_daemon for unique identifiers.
uuid = { version = "1", features = ["v4", "serde"] }
# Used by sandbox_daemon for derive-based error types.
thiserror = "2"

schemars = "0.8"
# Used by sandbox::exec to shlex-split `cmd` when an agent passes a shell-style
# line (e.g. `cmd: "node script.js"`). Lets the existing argv-based runner stay
# argv-pure while accepting the agent-natural input shape.
shlex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tempfile = "3"
# Integration tests compare against the shell protocol types.
iii-shell-proto = { path = "../iii-shell-proto" }
# Ensure tests that touch HOME env var run serially.
serial_test = "3"
